# cciw.co.uk

./: .bzrignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .hgignore  .pre-commit-config.yaml  .pylintrc  .watchmanconfig  CCIW django.e3p  CHANGELOG  ENV  README  README.rst  Vagrantfile  backup_s3.py  bootstrap-redhat.sh  bootstrap-venv.sh  cciw.e3p  cciw.e3t  cciw_django.kateproject  conftest.py  devbox.json  devel.py  django_migrate.py  fabfile.py  fabfile_old.py  fabutils  mail_duplicated_users.py  manage.py  migrate_html.py  p3.py  pyproject.toml  pytest.ini  remote-ipython-shell  requirements-dev.in  requirements-node.txt  requirements-py2.txt  requirements-py3.txt  requirements.in  (+4 more)
admin/templates/: base_site.html
cciw/: admin.py  apps.py  auth.py  aws.py  converters.py  data_retention.py  db_debug.py  settings.py  settings_calvin.py  settings_common.py  settings_dev.py  settings_tests.py  urls.py  webfaction.py  wsgi.py
cciw/accounts/: admin.py  apps.py  hooks.py  models.py  tests.py  utils.py
cciw/bookings/: admin.py  anonymizers.py  apps.py  autocomplete_light_registry.py  decorators.py  email.py  factories.py  forms.py  hooks.py  mailchimp.py  middleware.py  models.py  signals.py  stats.py  tests.py  urls.py  utils.py  views.py  widgets.py
cciw/cciwmain/: __init__.py  admin.py  anonymizers.py  apps.py  colors.py  common.py  decorators.py  feeds.py  forms.py  hooks.py  imageutils.py  models.py  settings.py  signals.py  urls.py  utils.py
cciw/contact_us/: admin.py  apps.py  bogofilter.py  forms.py  models.py  tests.py  urls.py  views.py
cciw/data_retention/: admin.py  applying.py  checking.py  datatypes.py  erasure_requests.py  (+4 more)
config/: crontab.template  data_retention.yaml  groups.yaml  gunicorn_logging.conf.template  hgweb.config  hgweb.wsgi  nginx.conf.template  static_roles.yaml  supervisor.conf.template
docs/: deployment.rst  development.rst  development_setup.rst  dns.rst  emails.rst  emails.txt  index.rst  lambda_forwardEmail.py  project.rst  security.rst  server_setup.rst  services.rst  staging.rst
fabutils/: __init__.py  apt.py  connections.py  disks.py  files.py  locales.py  postgresql.py  ssl.py  templates.py  users.py
fixtures/: dev_db.json
media/: adminextra.css  iegte6.css  ielt6.css  style.css  style2.css
migrate/: deduplicate_email.py  django_migrate.py
misc_src/: decorator.py  p3.py
scripts/: _cciw_env.py  add_photos.py  anonymise_db.py  backup_s3.py  cciw_python_hosted_commands  clear_old_locks.py  create_officer.py  create_some_bookings.py  handle_mail.py  handle_reference_bounces.py  initial_go_live.txt  install_command  manage_invitations.py  migrate_wiki.py  model_utils.py  plot_booking_creation_times.py  public_release.sh  reference_importer.py  reference_scraper.py  release_cciw_code  setup_postgres_dev_db.sql
securedownload/: __init__.py  models.py  views.py
templates/: 404.html  500.html
websitedown/: index.html
(+929 files in other folders)
