[project]
name = "cciw"
version = "1.0"
readme = "README.rst"
requires-python = "==3.13.*"
dependencies = [
    "backports-strenum>=1.3.1",
    "boltons>=24.1.0",
    "boto3>=1.27.1",
    "concurrent-log-handler>=0.9.20",
    "cryptography>=38.0.1",
    "datedelta>=1.4",
    "django-colorful>=1.3",
    "django-compressor>=4.4",
    "django-countries>=7.3.2",
    "django-decorator-include>=3.0",
    "django-mailer>=2.3.1",
    "django-paypal>=2.0",
    "django-render-block>=0.9.2",
    "django-simple-captcha>=0.5.17",
    "django-spurl>=0.6.8",
    "django-urlconfchecks>=0.11.0",
    "django-widget-tweaks>=1.4.12",
    "django==5.2.7",
    "docutils>=0.19",
    "fabric>3",
    "frozendict>=2.3.4",
    "furl>=2.1.3",
    "numpy>=1.23.3",
    "openpyxl>=3.0.10",
    "pandas-highcharts>=0.5.2",
    "pandas>=2.2.3",
    "parsy>=2.0",
    "pip-tools>=7.3.0",
    "psutil>=5.9.2",
    "psycopg2-binary>=2.9.3",
    "pwned-passwords-django>=1.6",
    "pydantic>=2",
    "pygments>=2.14.0",
    "pymemcache>=3.5.2",
    "python-dateutil>=2.8.2",
    "pytz>=2022.2.1",
    "pyyaml>=6.0.2",
    "qrcode[pil]>=7.4.2",
    "requests>=2.28.1",
    "sentry-sdk>=1.14.0",
    "sorl-thumbnail>=12.10.0",
    "weasyprint>=61.2",
    "wiki>=0.12",
    "gunicorn>=23.0.0",
    "fabutils-cciw>=0.1.1",
    "django-q2>=1.8.0",
    "blessed>=1.22.0",
]


[tool.black]
line-length = 120
# required-version = '22.1.0' # see https://github.com/psf/black/issues/2493
target-version = ['py313']


[tool.isort]
line_length = 120
profile = "black"
multi_line_output = 3
skip_glob = ['**/migrations/*.py']
known_third_party = ['django-wiki', 'django-functest', 'fabric', 'paramiko']
known_first_party = 'cciw'
skip = ['settings.py', 'node_modules', '.git']


[tool.mypy]
ignore_missing_imports = true
plugins = ['pydantic.mypy']
check_untyped_defs = true
exclude = ['submodules']

[tool.ruff]
line-length = 120
target-version = 'py313'

[tool.ruff.lint]
extend-select = [
  "UP",  # enable pyupgrade
  "I",  # enable isort
]
ignore = ["E501","E731"]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.11.1",
    "django-debug-toolbar>=4.1.0",
    "django-extensions>=3.2.3",
    "django-find-view>=0.1.0",
    "django-functest==1.6.2",
    "faker>=33.0.0",
    "hypothesis>=6.54.6",
    "ipdb>=0.13.13",
    "ipython>=8.5.0",
    "lxml>=4.9.1",
    "pre-commit-uv>=4.2",
    "pre-commit>=4.2",
    "pyastgrep>=1.3.2",
    "pyquery>=1.4.3",
    "pytest-cov>=3.0.0",
    "pytest-django>=4.5.2",
    "pytest-xdist[psutil]>=2.1.0",
    "pytest>=7.1.3",
    "ruff>=0.7.2",
    "selenium==4.4.3",
    "texttable>=1.7.0",
    "time-machine>=2.8.1",
    "tqdm>=4.67.0",
    "vcrpy>=4.2.1",
    "visidata>=3.1.1",
    "werkzeug>=3.1.1",
    "pytest-sugar>=1.0.0",
    "locust>=2.39.1",
]

[tool.uv]
environments = ["platform_python_implementation != 'PyPy'"]
